# flutter-vnc-viewer

./: .metadata  README.md  pubspec.yaml
android/: build.gradle  proguard-rules.pro  settings.gradle
android/nativelib/: build.gradle  proguard-rules.pro
android/nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp  vncclient.cpp  vncclient.h
android/nativelib/src/main/cpp/include/rfb/: rfbconfig.h
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  nativelib.cpp  vncclient.cpp  vncclient.h
example/: README.md  pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.m
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: libvncviewer_flutter.podspec
ios/Assets/: Shader.fsh  Shader.vsh
ios/Classes/: GLRender.h  GLRender.m  LibvncviewerFlutterPlugin.h  LibvncviewerFlutterPlugin.m  VncClient.h  VncClient.m
ios/include/rfb/: rfbconfig.h
lib/: VncViewerWidget.dart  libvncviewer_flutter.dart  libvncviewer_flutter_method_channel.dart  libvncviewer_flutter_platform_interface.dart  libvncviewer_flutter_web.dart
libvncserver/: CMakeLists.txt
libvncserver/examples/client/: gtkvncviewer.c
linux/: CMakeLists.txt  libvncviewer_flutter_plugin.cc  libvncviewer_flutter_plugin_private.h  my_texture.cc  my_texture.h  vncclient.cpp  vncclient.h
linux/include/libvncviewer_flutter/: libvncviewer_flutter_plugin.h
linux/test/: libvncviewer_flutter_plugin_test.cc
macos/: libvncviewer_flutter.podspec
macos/Classes/: LibvncviewerFlutterPlugin-Bridging-Header.h  LibvncviewerFlutterPlugin.swift  MyTexture.swift  VncClient.h  VncClient.m
macos/include/rfb/: rfbconfig.h
test/: libvncviewer_flutter_method_channel_test.dart  libvncviewer_flutter_test.dart
windows/: CMakeLists.txt  libvncviewer_flutter_plugin.cpp  libvncviewer_flutter_plugin.h  libvncviewer_flutter_plugin_c_api.cpp
windows/include/libvncviewer_flutter/: libvncviewer_flutter_plugin_c_api.h
windows/test/: libvncviewer_flutter_plugin_test.cpp
(+17 files in other folders)
